# pq-fido2-authenticator

./: .gitignore  LICENSE  README.md  pyproject.toml
authenticator/: __init__.py  __main__.py  bridge.py  config.py  models.py  pqcrypto.py  service.py  storage.py  touch.py  webauthn.py
authenticator/tests/: conftest.py  test_authenticator.py  test_storage.py  test_webauthn.py
codex/: AGENTS.md  REPORTS.md  plan.md  spec.md
codex/SECURITY_REPORTS/: 001-PLAIN_PRIVATE_KEY_STORAGE.md  002-UNTRUSTED_PAGE_TRIGGER_NO_USER_GESTURE.md  003-MISSING_RUNTIME_SCHEMA_VALIDATION.md  004-SIGNCOUNT_RACE_CONDITION.md  005-LIBOQS_UNPINNED_SOURCE_SUPPLY_CHAIN.md  006-PRODUCTION_SOURCEMAP_EXPOSURE.md  007-CSP_AND_RESOURCE_SURFACE_MINIMIZATION.md  README.md
codex/design-patterns/: python.md  typescript.md
codex/docs/: FALCON_INTEGRATION_HANDOVER.md  cdp-webauthn-interface.md  liboqs-python.md  python-fido2.md
codex/repomix/: repomix-output-Yubico-python-fido2.md
codex/specs/: PHASE-1-IMPLEMENTATION-SPEC.md
drizzle/: drizzle.config.ts  package.json
extension/: README.md  options.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
extension/native-host/: README.md  pq_uv_host.swift
extension/public/: README.md  manifest.json
extension/scripts/: README.md  build-liboqs-wasm.sh  build-native-host-macos.sh  install-native-host-macos.sh  setup-liboqs-emscripten.sh  setup-touch-id-uv-macos.sh
extension/src/: README.md
frontend/: package.json
rp_server/: __init__.py  app.py  challenges.py  config.py  database.py  models.py  schemas.py  services.py
(+34 files in other folders)
